assets/css/style.css
/*Looking for a job as technical writer, UX-writer or interaction designer */

/* -- Variables -- */
:root {
  --primary-color: rgb(185, 182, 182);
  --secondary-color: #000;
  --gradient-top-color: rgb(131, 200, 218);
  --gradient-bottom-color: rgb(2, 78, 97);
  --font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,
    Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  
}
html {
  font-size: 12px;
}
/* -- CSS Reset -- */
* {
  text-rendering: optimizeLegibility;
  margin: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html,
body,
div,
h1,
a,
img,
ul,
li,
p {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  font-family: var(--font);
}

/*-- Reset end --*/


/*basic settings*/

body {
  min-height: 100vh;
  scroll-behavior: smooth;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  border-style: none;
  color: var(--secondary-color);
}

p {
  color: rgb(0, 0, 6);
  background-color: rgba(248, 248, 255, 30%);
  padding: 7px 6px 12px 8px;
  border-radius: 5px;
  font-size: 1.2rem;
}

h2 {
  font-size: 1.3rem;
  text-transform: uppercase;
  font-weight: 200;
  letter-spacing: 0.2em;
}

h3 {
  font-size: 1.2rem;
  font-weight: 200;
}

h4 {
  font-size: 1rem;
  font-weight: 500;
}

/* flex-versuche

.flex {
  display: flex;

}

picture{
  flex-shrink: 0;
}

.flex.column {
  flex-direction: column;
}
*/

/*Header and navigation*/

header {
  background-color: var(--gradient-top-color);
  height: auto;
  position: fixed;
  width: 100vw;
  display: flex;
  top: 0px;

}
/* logo etc*/

.logo {
  -webkit-box-flex: 1;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -ms-flex-item-align: left;
  align-self: left;
  -webkit-animation: fadein 2s;
  animation: fadein 2s;
}


/*navigation*/
/*remove for label usage
.navicon {
  background-image: url("../../images/menu-rounded-solid.svg");
  height: 1em;
  width: 1em;
  background-repeat: no-repeat;
  margin-top: 0.8em;
}
*/
nav ul li {
  margin: 0.5em;
  
}


ul.navlist {
  list-style: none;
  display: none;
  
}


.lbl-toggle-nav{
  display: block;
  height: 3rem;
}
.lbl-toggle-nav:hover {
  color: #7C5A0B;
}

.lbl-toggle-nav::before {
  content: ' ';
  display: inline-block;
  background-image: url("../../images/menu-rounded-solid.svg");
  height: 1em;
  width: 1em;
  background-repeat: no-repeat;
  margin-top: 0.8em;
  padding-right: 1rem;


  transition: transform .2s ease-out;
}

.toggle-nav:checked + .lbl-toggle-nav::before {
 background-image: url("../../images/close.svg");
 padding-left: calc(100vw -1rem);
}

.toggle:checked + ul.navlist {
  list-style: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vw;
  background-color: var(--gradient-top-color);
  width: 100vw;
  right:0px;
  
}

.toggle-nav:checked + .lbl-toggle-nav + ul.navlist {
  list-style: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vw;
  background-color: var(--gradient-top-color);
  width: 100vw;
  right:0px;
}

a,
a:hover {
  text-decoration: none;
  border: none;
  border-style: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  
}
a.current{
  text-decoration: underline solid var(--secondary-color) 2px;
}

img {
  max-width: 100%;
  display: block;
}
/*end navigation*/

/* footer and footer-nav*/ 
footer {
  background-color: var(--gradient-bottom-color);
  width: 100vw;
  display: flex;
  justify-content: space-between;
}

footer ul li {
  display: inline-block;
  margin: 0.5em;
  padding-top: 5px;
}

.network ul {
  display: inline-block;
}
footer ul {
  right: 0.1em;
}

/* end footer */


/*start content*/

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/*home page splash */
.splash {
  background-image: url("../../images/cat_on_the_prowl_420px.jpg");
  background-size: cover;
  width: 100vw;
  height: 280px;

  background-repeat: no-repeat;
  position: relative;
  top: 2.5em;

}

.splash h1 {
  font-size: 1.7rem;
  font-weight: 600;
  color:aliceblue;
}
/*end splash*/


/*normal content*/

.bio,
.moreBio,
.projectList {
  margin-top: 1.3rem;
  font-size: 1rem;
  margin-left: 3vw;
  margin-right: 3vw;
}

 .bio > p,
 .moreBio > p,
 .projectList p{
   font-size:1rem;
 }

 
 .projectList {
  margin-top: 4rem;
 }
/*end normal content 

/*Styles for extendable content => experimental*/

.collapsible-wrapper{
  padding-top: 0.5rem;
}

input[type='checkbox'] {
  display: none;
}



label > h2{
  display: inline-block;
}

.lbl-toggle{
  display: block;
}
.lbl-toggle:hover {
  color: #7C5A0B;
}

.lbl-toggle::before {
  content: ' ';
  display: inline-block;

  border-top: 5px solid transparent;
  border-bottom: 5px solid transparent;
  border-left: 5px solid currentColor;

  vertical-align: middle;
  margin-right: .7rem;
  transform: translateY(-2px);

  transition: transform .2s ease-out;
}

.collapsible-content {
  max-height: 0px;
  overflow: hidden;

  transition: max-height .25s ease-in-out;
  
}

.collapsible-content ul,
.collapsible-content h3{
  padding-left: 0.3rem;
  padding-right:0.3rem;
}

.collapsible-content ul{
  margin-bottom: 0.7rem;
}

.toggle:checked + .lbl-toggle + .collapsible-content {
  max-height: 100%;
}

.toggle:checked + .lbl-toggle::before {
  transform: rotate(90deg) translateX(-3px);
}

.toggle:checked + .lbl-toggle {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

/* media queries for larger screens*/
@media (min-width:767px){
  html{
    font-size: 16px;
  }
  h1 {
  font-size: 2rem;
}
h2{
font-size: 1.6rem;

}
.bio,
.moreBio,
.projectList {
  margin-top: 3rem;
  font-size: 1rem;
  margin-left: 5vw;
  margin-right: 5vw;
}

@media (min-width:1200px){
  html {
    font-size: 20px;
  }
h1 {
  font-size: 2rem;
}
h2{
font-size: 1.6rem;
}

.navmenu{
  padding-bottom: 1rem;
}

nav a {
  font-size:1.2rem;
  padding: 1rem;
}


nav ul li {
  margin: 1em;
}


ul.navlist {
  list-style: none;
  display: flex;
  flex-direction: row;
  height: 3rem;
}

.lbl-toggle-nav, .lbl-toggle-nav:before{
  display:none;
}

a,
a:hover {
  text-decoration: none;
  border: none;
  border-style: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  color:var(--gradient-bottom-color);
}

.bio > p, .moreBio > p, .projectList p{
  font-size: 1.2rem;
}
/*footer on laptop*/
.network {
  display: inline-block;
}

.network ul {
  display: flex;
  align-items: center;
}

.network ul li {
  display: inline-block;
  margin-right: 8px;
}

.network ul li a {
  display: inline-block;
  width: 30px;
  height: 30px;
  cursor: pointer;
}

#svg-icon-email {
  padding-top: 1px;
}

.network ul li a .svg-icon {
  padding: 4px;
  width: 22px;
  height: 22px;
  margin: 0;
  display: block;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
}

.network ul li a .svg-icon path {
  fill: var(--secondary-color);
  -webkit-transition: 1s;
  transition: 1s;
}

.network ul li a:hover .svg-icon path {
  fill: rgb(202, 198, 198);
  -webkit-transition: 0.1s;
  transition: 0.1s;
}


}

@media (max-width: 800px) {
  .bio {
    max-width: none;
  }
}

.inProgress {
  color: #fff;
  font-size: 3em;
}



/* old responsive media queries
@media (max-width: 500px) {
  .logo {
    -ms-flex-item-align: center;
    -ms-grid-row-align: center;
    align-self: center;
  }
}

.logo img {
  max-width: 165px;
  height: auto;
}

.bio {
  -webkit-box-flex: 1;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-animation: fadein 4s;
  animation: fadein 4s;
  max-width: 66%;
}

*/

